fix body overflow x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@
 
 /*-- 0.0 Général --*/
 
+body {
+    overflow-x: hidden;
+}
+
 /* Fonts */
 
 @font-face {
